# explainable-agent-lab

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
data/evals/: hf_complexfuncbench_first_turn_100.jsonl  hf_xlam_fc_sample.jsonl  swebench_lite_test.jsonl
docs/: ARCHITECTURE.md
examples/: basic_usage.py  custom_eval_sample.jsonl  custom_tool_usage.py  multi_agent_demo.py  showcase_all_features.py
explainable_agent/: __init__.py  agent.py  cli.py  config.py  dataset_adapters.py  eval_tool_calls.py  json_utils.py  lmstudio_client.py  openai_client.py  orchestrator.py  report.py  schemas.py  tools.py
scripts/: db_agent_step_test.py  eval_hf_tool_calls.py  eval_swebench_readiness.py  prepublish_check.py  step_by_step_test.py  test_pypi_install.py
tests/: test_agent.py  test_dataset_adapters.py  test_eval_actionable_plan.py  test_eval_tool_calls.py  test_json_utils.py  test_report.py  test_sqlite_tools.py  test_tools.py
